# caesar

./: .dockerignore  .gitignore  404.html  CNAME  Cargo.toml  ESOP26.md  LICENSE  OOPSLA_AEC.html  OOPSLA_AEC.md  README.md  benchmarks.py  benchmarks.txt  build.rs  caesar.html  devguide.html  index.html  opensearch.xml  print.html  quickstart.html  related-work.html  run-benchmarks.fish  searchindex.js  searchindex.json  sitemap.xml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-binaries-gh_release.yml  build-docker-registry.yml  build-vsix-gh_release.yml  build-vsix-marketplaces.yml  create_docker_image.yml  create_nightly_release.yml  create_release.yml  create_tagged_release.yml  docker.yml  mdbook.yml  nightly_release.yml  on_tagged_release_publish.yml  rust.yml  setup_gh_release.yml  tagged_release.yml  tagged_release_publish_docker.yml  website.yml
.trunk/: .gitignore  trunk.yaml
about/: index.html
artifact/: README.md  benchmark-results.csv  benchmark-results.txt  model-checking-smoke.heyvl  run-all-benchmarks.sh  run-model-checking-smoke.sh  run-model-checking.sh  run-smoke.sh
assets/css/: styles.03829b87.css  styles.194e9fbb.css  styles.2c867bad.css  styles.32a64929.css  styles.427bdaf4.css  styles.4719a0a2.css  styles.57f36cd1.css  styles.69137416.css  styles.8183aef1.css  styles.8526e99f.css  styles.95a2b29a.css  styles.9a4239ed.css  styles.b070e9d8.css  styles.d628694a.css
assets/js/: 0058b4c6.0cbf56c5.js  0058b4c6.4386d973.js  0058b4c6.47c88801.js  0058b4c6.579cf166.js  0058b4c6.78faf3a0.js  0058b4c6.84690391.js  0058b4c6.9af6b943.js  0058b4c6.d93d8aa9.js  0058b4c6.e1669f53.js  0058b4c6.e651e07a.js  0058b4c6.ff0fe452.js  01a85c17.117b9f6e.js  01a85c17.59577338.js  01a85c17.91072572.js  01a85c17.aefa6504.js  01a85c17.bb0599a4.js  01a85c17.d11eedb7.js  01a85c17.d3ef94d1.js  050a40a1.064e3208.js  062d561a.69e5de48.js  0632ea82.3c8b4262.js  0632ea82.7307f542.js  0632ea82.a542be88.js  0632ea82.b757985d.js  0632ea82.b98e76d8.js  0632ea82.cfc983df.js  0632ea82.f21aaef8.js  0a084683.35972503.js  0a084683.37eb7d9c.js  0a084683.4e514d75.js  0a084683.7eaf663b.js  0a084683.9ddb632a.js  0a084683.a91fab24.js  0b46e8e7.16311e72.js  0b46e8e7.17fcce32.js  0b46e8e7.1b7eadaa.js  0b46e8e7.4f1ef30b.js  0b46e8e7.56336987.js  0b46e8e7.69d2405e.js  0b46e8e7.6a2d0879.js  (+1033 more)
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/authors/: index.html
blog/oopsla23/: index.html
blog/oopsla23-distinguished-artifact/: index.html
blog/tags/: index.html
blog/whatsapp-privacy-aware-program-analysis/: index.html
caesar-ext/: package-lock.json  package.json
caesar-ext/src/: APIRegister.ts  GutterInformationView.ts  Manager.ts  StateManager.ts  StatusBarView.ts  VerificationManager.ts  extension.ts
docker/: BUILDING.md  CAV26.dockerfile  CAV26.hello.sh  Dockerfile  ESOP26.dockerfile  OOPSLA23.dockerfile  hello.sh  single_platform.dockerfile
docs/: CNAME  README.md  book.toml  index.html
docs/OOPSLA_AEC/: index.html
docs/caesar/: index.html
docs/devguide/: index.html
docs/getting-started/: index.html
docs/heyvl/: index.html
docs/model-checking/: index.html
docs/pgcl/: index.html
docs/proof-rules/: index.html
docs/publications/: index.html
docs/src/: OOPSLA_AEC.md  SUMMARY.md  caesar.md  devguide.md  introduction.md  quickstart.md  related-work.md
docs/stdlib/: index.html
frontends/: pgcl.html
heyvl/: domains.html  expressions.html  index.html  procs.html  statements.html
img/: architecture-oopsla23.afdesign  heyvl.afdesign  laurel-square.afdesign  logos.afdesign  social-card.afdesign
jani/: Cargo.toml  README.md
jani/src/: exprs.rs  lib.rs  models.rs  properties.rs  types.rs
lean/: Caesar.lean  Main.lean  lake-manifest.json  lakefile.lean
lean/Caesar/: Basic.lean  Expr.lean  Syntax.lean
pgcl/: README.md
pgcl/examples-heyvl/: 2drwalk.heyvl  C4B_t303.heyvl  README.md  ast-rule.heyvl  ast-rule2.heyvl  bayesian_network.heyvl  brp1.heyvl  brp2.heyvl  brp3.heyvl  condand.heyvl  esc_spline_ast.heyvl  fail-geo1.heyvl  fcall.heyvl  generate.fish  geo1.heyvl  hyper.heyvl  linear01.heyvl  nested-rabin.heyvl  prdwalk.heyvl  prspeed.heyvl  rabin1.heyvl  rabin1_wlp.heyvl  rabin2.heyvl  rabin2_wlp.heyvl  rabin3_wlp.heyvl  rdspeed.heyvl  rdwalk.heyvl  refute-brp5_bmc.heyvl  (+19 more)
pgcl/pgcl2heyvl/: conftest.py  pyproject.toml
pgcl/pgcl2heyvl/pgcl2heyvl/: cmd.py  direct_encode.py  encode.py  heyvl.py  utils.py
pgcl/pgcl2heyvl/pgcl2heyvl/tests/: test_encodings.py
pgcl/pgcl2heyvl/pgcl2heyvl/tests/golden_files/inputs/: test_ast.pgcl  test_k_ind.pgcl  test_omega.pgcl  test_ost.pgcl
pgcl/pgcl2heyvl/pgcl2heyvl/tests/golden_files/outputs/: test_encode_ast_mciver.heyvl  test_encode_k_ind.heyvl  test_encode_omega_inv.heyvl  test_encode_optional_stopping.heyvl  test_encode_past.heyvl  test_k_ind.heyvl
scooter/: Cargo.toml
scooter/src/: main.rs  runner.rs  slicing_benchmark.rs  traces.rs
search/: index.html
slicing-benchmarks/: all-benchmarks.fish  error-witnessing.txt  result-verification-witnessing.csv  verification-preserving.txt  verification-witnessing.txt  verifying-subset.txt
src/: depgraph.rs  driver.rs  guardrails.rs  main.rs  pretty.rs  refinement.rs  resource_limits.rs  scope_map.rs  timing.rs  tyctx.rs  version.rs
stdlib/: booleans.html  distributions.html  index.html  lists.html  numbers.html
tests/: README.md  coupon-collector.heyvl  geo-recursive.heyvl  integration.rs  noisy_or.heyvl  pgf.heyvl  six-sided-die.heyvl  zeroconf.heyvl
vscode-ext/: .eslintignore  .vscodeignore  CHANGELOG.md  README.md  esbuild.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vsc-extension-quickstart.md
website/: docusaurus.config.js  package.json
z3rro/: Cargo.toml  README.md
z3rro/src/: array.rs  filtered_model.rs  fuel.rs  interpreted.rs  lib.rs  list.rs  lit.rs  model.rs  orders.rs  params.rs  pretty.rs  probes.rs  prover.rs  quantifiers.rs  scope.rs  smtlib.rs  test.rs  uint.rs  ureal.rs  util.rs
z3rro/src/eureal/: concrete.rs  datatype.rs  mod.rs  pair.rs
(+621 files in other folders)
