[workspace]
members = [
    "scooter",
    "z3rro"
]

[package]
name = "caesar"
version = "1.0.0"
authors = ["Philipp Schroer <phisch@cs.rwth-aachen.de>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

[features]
default = ["static-link-z3"]
datatype-eureal = ["z3rro/datatype-eureal"]
datatype-eureal-funcs = ["z3rro/datatype-eureal-funcs"]
static-link-z3 = ["z3/static-link-z3"]
# Emit log messages to stderr without timing information. This is useful to diff logs.
log-print-timeless = [] 

[dependencies]
string-interner = "0.12"
once_cell = "1.8"
typed-arena = "2.0"
lalrpop-util = "0.19"
z3 = "^0.12"
z3-sys = "^0.8"
ref-cast = "1.0"
replace_with = "0.1"
num = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "^0.3.3", features = ["env-filter", "json"] }
structopt = "0.3"
pathdiff = "0.2"
egg = "0.7"
tokio = { version = "1", features = ["time", "macros", "rt", "rt-multi-thread"] }
simple-process-stats = "1.0"
hdrhistogram = "7.4"
ariadne = "0.1"
atty = "0.2"
shellwords = "1.1.0"
thiserror = "1.0"
indexmap = "1.9"
pretty = "0.11"
z3rro = { path = "./z3rro" }
dashmap = "5.4"
im-rc = "15.1.0"
cfg-if = "1.0.0"
itertools = "0.12.0"

[build-dependencies]
lalrpop = "0.19"
built = { version = "0.5", features = ["git2", "chrono"] }

[dev-dependencies]
lit = "1.0"
clap = "2.33"
glob = "0.3"
proptest = "1.0"
pretty_assertions = "1.4.0"

[[test]]
name = "integration"
path = "tests/integration.rs"
harness = false

[profile.release]
# Debug information is nice, but it increases the binary size by about 500 megabytes.
# So we don't enable it for release builds.
# debug = 1

# there are tests which take more than 10x longer with z3 not optimized, so just optimize z3 as well as possible.
# this might make some debugging a bit harder, so you might want to disable it for that.
[profile.dev.package.z3-sys]
opt-level = 3

[patch.crates-io]
z3 = { git = 'https://github.com/Philipp15b/z3.rs.git', rev = 'bdd501ca1e50785365b875b3438a0cf953cffbfc' }
z3-sys = { git = 'https://github.com/Philipp15b/z3.rs.git', rev = 'bdd501ca1e50785365b875b3438a0cf953cffbfc' }
# to work on z3.rs locally, clone it into the main directory and use the following directive instead:
# z3 = { path = 'z3.rs/z3' }

lit = { git = 'https://github.com/Philipp15b/lit.git', rev = '40426a541626b90aed4ceaac9b7008b647f06d1e' }

# see https://github.com/heim-rs/darwin-libproc/pull/3#issuecomment-1645444056
darwin-libproc = { git = "https://github.com/Orycterope/darwin-libproc.git", rev = "f73ddb1002d51ae74c1b41670fae56bd5896b7a3" }
