[package]
name = "scooter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cli-table = "0.4"
shlex = "1.3.0"
csv = "1.3.1"
