[package]
name = "z3rro"
version = "0.1.0"
edition = "2021"

[dependencies]
z3 = "^0.13.2"
ref-cast = "1.0"
num = "0.4"
once_cell = "1.8"
cfg-if = "1.0"
tracing = "0.1"
tempfile = "3.3"
thiserror = "1.0"
im-rc = "15"
enum-map = "2.7.3"
itertools = "0.14.0"

[features]
datatype-eureal = []
datatype-eureal-funcs = ["datatype-eureal"]
datatype-fuel = []

[dev-dependencies]
proptest = "1.6.0"
