[tool.poetry]
name = "pgcl2heyvl"
version = "0.1.0"
description = ""
authors = ["Philipp Schröer <hebipp1@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
probably = {git = "https://github.com/Philipp15b/probably.git",rev = "f6d09ed0d4c0fffd7b46fd7d310c239b469dcee4"}
click = "^7.1.2"
attrs = "^19.3.0"

[tool.poetry.scripts]
pgcl2heyvl = "pgcl2heyvl.cmd:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
